@@ -1,45 +1,51 @@
-import org.gradle.internal.jvm.Jvm
 dependencies {
-    api project(":k-commons")
-    api(rootProject.dependency_management['javassist'])
-    api(rootProject.dependency_management['velocity-engine-core'])
-    api(rootProject.dependency_management['velocity-tools-generic'])
-    testImplementation files(Jvm.current().toolsJar)
+    api(project(":k-utils"))
 }
 
-
-jar.enabled = true
-bootJar.enabled(false)
-
-def allJars = (configurations.runtimeClasspath)
-        .findAll{it.isFile()}
-        .collect { 'lib/' + it.name }
-        .join(' ')
-
-task copyDependencies(type: Copy){
-    from configurations.runtimeClasspath
-    into "$buildDir/libs/lib"
-}
-jar.dependsOn(copyDependencies)
 
 jar {
     exclude("logback.xml")
-    manifest {
-        attributes(
-                'Main-Class': "io.github.kylinhunter.commons.clazz.Main",
-                'Premain-Class': "io.github.kylinhunter.commons.clazz.a.agent.PreMain",
-                'Agent-Class': "io.github.kylinhunter.commons.clazz.a.agent.AgentMain",
-                'Can-Redefine-Classes': true,
-                'Can-Retransform-Classes': true,
-                'Class-Path': allJars + " ."
-        )
-    }
+    exclude("k-jul-logging.properties")
+
 }
+
 test {
     jvmArgs "-javaagent:${classpath.find { it.name.contains("jmockit") }.absolutePath}"
+    jvmArgs('--add-opens', 'java.base/java.net=ALL-UNNAMED')
     println jvmArgs
+    jacoco {
+        includes = []
+        excludes = []
+    }
 }
 
+jacocoTestReport {
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    "io/github/kylinhunter/commons/**/exception/**",
+            ])
+        }))
+    }
+}
 
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            enabled = true
+            element = 'CLASS'
+            includes = ['io.github.kylinhunter.*']
+            excludes = ['io.github.kylinhunter.commons.clazz.exception.*']
+            limit {
+                counter = 'INSTRUCTION'
+                minimum = 0.5
+            }
+            limit {
+                counter = 'BRANCH'
+                minimum = 0.3
+            }
+        }
+    }
+}
 
 
